fixes Java version